@@ -1,9 +1,11 @@
 package org.example.task8.aggregatingOperations;
+
+import java.util.Arrays;
 import java.util.List;
 
 public class FindFirstChar {
     public static void main(String[] args) {
-        List<String> names = List.of("Катя", "Мирон", "Борис", "Агапий");
+        List<String> names = Arrays.asList("Оля", "Гога", "Борис", "Бадьян");
         String name = names.stream()
                 .filter(n -> n.startsWith("Б"))
                 .findFirst()
